--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 thop==0.0.31.post2005241907
 joblib==1.0.1
-torchvision==0.10.0+cu111
+torchvision>=0.10.0+cu111
 tqdm==4.50.2
-torch==1.9.0+cu111
+torch>=1.9.0+cu111
 matplotlib==3.3.2
 requests==2.25.1
 numpy==1.20.3
 opencv_python==4.5.2.52
-scipy==1.5.2
+scipy>=1.5.2
 pandas==1.1.3
 seaborn==0.11.1
 onnx==1.9.0
