--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
-thop==0.0.31.post2005241907
-scipy==1.7.2
-seaborn==0.11.1
-joblib==1.0.1
-matplotlib==3.4.3
-torch==1.10.1+cu113
-pandas==1.3.4
-opencv_python==4.5.3.56
-tqdm==4.62.3
-numpy==1.20.3
-torchvision==0.11.2+cu113
-requests==2.25.1
-onnx==1.10.2
-Pillow==9.0.0
+joblib==1.2.0
+matplotlib==3.5.1
+numpy==1.22.4
+onnx==1.12.0
+opencv_python==4.6.0.66
+pandas==1.4.2
+Pillow==9.3.0
 PyYAML==6.0
-wandb==0.12.9
+requests==2.27.1
+scipy==1.7.3
+seaborn==0.11.2
+setuptools==61.2.0
+thop==0.1.1.post2207130030
+torch==1.12.1+cu116
+torchvision==0.13.1+cu116
+tqdm==4.64.0
+wandb==0.13.6
